# devops-tasks

.github/workflows/: ecr.yml  main.yml  terraform-infra.yml
todo-bot/bot_app/: .env  alembic.ini  db.py  docker-compose.yaml  main.py  pyproject.toml
todo-bot/bot_app/bot/: config.py
todo-bot/bot_app/bot/crud/: user.py
todo-bot/bot_app/bot/handlers/: start.py
todo-bot/bot_app/bot/middlewares/: db_middleware.py  state_middleware.py
todo-bot/bot_app/bot/models/: image.py  user.py
todo-bot/bot_app/bot/schemas/: user.py
todo-bot/bot_app/bot/states/: states.py
todo-bot/bot_app/migrations/: env.py
todo-bot/bot_app/migrations/versions/: 7bd04e2cd640_init.py
