[project]
name = "devops-training-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrei Ryzhykau",email = "andrei.ryzhykau@ventionteams.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cffi (>=1.17.1,<2.0.0)",
    "aiogram (>=3.19.0,<4.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "pydantic (>=2.4.1,<2.11)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "greenlet (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

